--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -36,7 +36,7 @@ jobs:
     
     - name: Check the output
       run: |
-        test -f ${{ env.doc_name }}-draft.pdf
+        test -f ${{ env.doc_name }}.pdf
         test -f ${{ env.doc_name }}.bbl
     
     - name: Move the auto-pdf-preview tag
