--- a/doc/Makefile
+++ b/doc/Makefile
@@ -8,11 +8,11 @@ DOCNAME = Spectrum
 DOCVERSION = 1.2
 
 # Publication date, ISO format; update manually for "releases"
-DOCDATE = 2023-09-07
-SDATE = 20230907
+DOCDATE = 2023-12-15
+SDATE = 20231215
 
 # What is it you're writing: NOTE, WD, PR, REC, PEN, or EN
-DOCTYPE = PR
+DOCTYPE = REC
 
 # An e-mail address of the person doing the submission to the document
 # repository (can be empty until a make upload is being made)
