--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Setup dependencies
       run: |
         sudo apt update
-        sudo apt install texlive-latex-base texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended xsltproc latexmk cm-super
+        sudo apt install texlive-latex-base texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-font-utils xsltproc latexmk cm-super
         sudo snap install pdftk
     
     - name: Build the document
@@ -36,8 +36,9 @@ jobs:
     
     - name: Check the output
       run: |
+        ls -lrt
         test -f ${{ env.doc_name }}-draft.pdf
-        test -f ${{ env.doc_name }}.bbl
+        #test -f ${{ env.doc_name }}.bbl
     
     - name: Move the auto-pdf-preview tag
       uses: weareyipyip/walking-tag-action@v2
